samples/_failures_safe/1761355256_94a8e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0bf893a3.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_0bf893a3.c:167: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0bf893a3.c:166:5: error: expected declaration or statement at end of input
  166 |     for
      |     ^~~
